--- a/_posts/2017-11-15-Capstone.md
+++ b/_posts/2017-11-15-Capstone.md
@@ -26,7 +26,7 @@ At its essence, my project is dealing with a _binary classification problem_, me
 
 I obtained a corpus of text courtesy of the Bauhaus-Universität Weimar in Germany. The corpus consists of 19,538 articles of text, with several accompanying columns of information. Another separate corpus contained the 'judgment scores' that indicated whether that particular article was clickbait. When read into a pandas dataframe, it looks like the following:
 
-![Dataframe (combined version with additional features)](https://i.imgur.com/lL1eZZV.png)
+![Dataframe (combined version with additional features)](https://i.imgur.com/MXj6aB7.png)
 
 ### A Word About Text... 
 
