--- a/_posts/2017-11-15-Capstone.md
+++ b/_posts/2017-11-15-Capstone.md
@@ -60,6 +60,8 @@ Moving on the task at hand, I tried my hand at the following: Logistic regressio
 
 My experiments with the various forms of classifiers showed that a multinomial unigram Naive Bayes classifier worked best, achieving a recall score of 0.71. This means that assuming an article was _actually clickbait_, the model was able to predict that it was so 71 times out of 100. 
 
+![results](https://i.imgur.com/HhSHVHD.png)
+
 ## Neural Networks Into The Fray
 
 Given the complexity of text classification problems, I wanted to see if modeling using neural networks could help to improve the score. According to literature, the use of long short-term memory (LSTM) networks is appropriate for text analysis because of its ability to retain context (i.e. prior inputs inform the last output - words, in this case). I will not go through what an LSTM is greater detail, but if you are interested [this article](http://colah.github.io/posts/2015-08-Understanding-LSTMs/) provides an excellent description.
