--- a/_posts/2017-11-15-Capstone.md
+++ b/_posts/2017-11-15-Capstone.md
@@ -54,6 +54,36 @@ In text analysis, topic modeling is a form of unsupervised learning that uses st
 
 ![LDA](https://i.imgur.com/x1W0fa2.png)
 
+Some of the topics identified in the corpus were:
+7 - business<br>
+8 - family <br>
+9 - police matters<br>
+11,16,23,29,25,33,48 - politics/government<br>
+14 - sports<br>
+19 - russia<br>
+24,56,57 - football<br>
+26 - middle east<br>
+27 - movies, books and tv<br>
+28 - health<br>
+32 - places<br>
+35 - music and dance<br>
+37 - taxes and retirement<br>
+39 - climate change<br>
+40 - gender issues<br>
+41 - flights<br>
+43 - dining<br>
+44 - weather<br>
+45 - social media<br>
+51 - vacation<br>
+58 - australia<br>
+59 - transport<br>
+65 - india<br>
+68 - education<br>
+71 - animals<br>
+72 - religion<br>
+81 - social media<br>
+83 - royalty<br>
+
 ## Classification Models
 
 Moving on the task at hand, I tried my hand at the following: Logistic regression, Naive Bayes (multinomial and Bernoulli), support vector machines, and random forest classifiers. A quick look at the dataset showed that the ratio of clickbait to non-clickbait articles was 3:1, indicating that the dataset was imbalanced. I would handle the imbalance by random undersampling the data. In essence, a 1:1 ratio of clickbait and non-clickbait articles is generated and used to fit the model. 
