--- a/_posts/2017-11-15-Capstone.md
+++ b/_posts/2017-11-15-Capstone.md
@@ -8,9 +8,9 @@ image: "/images/click1.jpg"
 
 ## Motivation
 
-In the Internet era, the traditional walls of media have been broken down. Today, it is possible for anyone to publish an article or video online. Thousands of websites exist, allowing one to pick and choose where they consume news content. 
+In the Internet era, the traditional walls of media have been broken down. Today, it is possible for anyone to publish an article or video online. The fight for viewership online has driven many to publish articles of subpar quality where the content is not as useful as we had hoped it would be. 
 
-The proliferation of content has its drawbacks. Studies have shown that our attention spans have become shorter as we are overwhelmed by the amount of content we get to choose from. The fight for viewership online has driven many to publish articles of subpar quality where the content is not as useful as we had hoped it would be. Clickbait - defined as a type of web content that intentionally draws viewers into clicking on a link, is a problem that all of us are aware of and accept as a part of living in the digital age. 
+Clickbait - defined as a type of web content that intentionally draws viewers into clicking on a link, is a problem that all of us are aware of and accept as a part of living in the digital age. 
 
 Part of how clickbait works is that they often have catchy titles. When clicked upon, users are often taken to articles whose content either has little purpose (read: time waster), or simply does not display the content that was promised in the title. While it is effective at attracting eyeballs to a web page for marketers, users are often 'left hanging', frustrating them in addition to being an unproductive use of time. 
 
@@ -113,3 +113,5 @@ This has been a very interesting project for me. My final thoughts on this are:
 3. There are many potential areas for improvement. For one, there are already papers published on the use of character-level RNNs, where every token is a single letter in the corpus. I did not consider the implementation of this model since my project is a classification problem, not a text-generative one. Another way to refine the model would be to introduce additional feature engineering that may help in classifying, e.g. using POS(part-of-speech) tagging to allow the model to better understand context within a sentence. Last but not least. 
 4. Text data is unstructured, messy and hard to preprocess. There are dozens of scenarios that a regex has to take into account for it to properly clean the data. It is also hard to visualize given its high-dimensionality. Many errors can be made in between the steps of preprocessing and model training, without an easy way to spot them.
 5. At the end of the day, as with all models, (garbage in = garbage out). Admittedly, my preprocessing steps only sought to remove basic items such as punctuation and unicode format. I note that articles may sometimes contain email addresses and emojis. There were also several words with spelling errors that I did not correct. A thorough cleaning of the dataset should be able to factor in all the above to ensure a better score.
+
+Source code for my project is [here.](https://github.com/ekbq/hello-world/blob/master/Capstone/Capstone%20-%2090.ipynb)
