--- a/_posts/2017-11-15-Capstone.md
+++ b/_posts/2017-11-15-Capstone.md
@@ -114,4 +114,4 @@ This has been a very interesting project for me. My final thoughts on this are:
 4. Text data is unstructured, messy and hard to preprocess. There are dozens of scenarios that a regex has to take into account for it to properly clean the data. It is also hard to visualize given its high-dimensionality. Many errors can be made in between the steps of preprocessing and model training, without an easy way to spot them.
 5. At the end of the day, as with all models, (garbage in = garbage out). Admittedly, my preprocessing steps only sought to remove basic items such as punctuation and unicode format. I note that articles may sometimes contain email addresses and emojis. There were also several words with spelling errors that I did not correct. A thorough cleaning of the dataset should be able to factor in all the above to ensure a better score.
 
-Source code for my project is [here.](https://github.com/ekbq/hello-world/blob/master/Capstone/Capstone%20-%2090.ipynb)
+Source code for my project is [here.](https://github.com/ekbq/hello-world/blob/master/Capstone/Capstone%20-%20Clickbait.ipynb)
