--- a/_posts/2017-11-15-Capstone.md
+++ b/_posts/2017-11-15-Capstone.md
@@ -18,7 +18,7 @@ The main goal of my capstone project was to use machine learning techniques to c
 
 ## Success Metrics
 
-![confusion matrix](https://i.imgur.com/Jnb0JQY.png){% include image.html url="https://i.imgur.com/Jnb0JQY.png" description="confm" %}
+![confusion matrix]{% include image.html url="https://i.imgur.com/Jnb0JQY.png" description="confm" %}
 
 At its essence, my project is dealing with a _binary classification problem_, meaning it is trying to determine if a certain article is clickbait (assigned to value 1) or not (assigned to value 0). The confusion matrix is a table that is often used to describe the peformance of a classifier. There are numerous metrics that can be obtained from the table, but for simplification purposes, I am most interested in the _recall_ score, which is given by the number of true positives divided by the total number of true positives and false negatives. 
 
