--- a/_posts/2017-11-15-Capstone.md
+++ b/_posts/2017-11-15-Capstone.md
@@ -26,7 +26,7 @@ At its essence, my project is dealing with a _binary classification problem_, me
 
 I obtained a corpus of text courtesy of the Bauhaus-Universität Weimar in Germany. The corpus consists of 19,538 articles of text, with several accompanying columns of information. Another separate corpus contained the 'judgment scores' that indicated whether that particular article was clickbait. When read into a pandas dataframe, it looks like the following:
 
-![Dataframe (combined version with additional features)](https://i.imgur.com/MXj6aB7.png){:class="img-responsive"}
+{% include image.html url="https://i.imgur.com/MXj6aB7.png" description="df" %}
 
 ### A Word About Text... 
 
@@ -36,7 +36,7 @@ Text data comes in an unstructured form. There are hundreds of thousands of ways
 
 First off, I was curious to find out which words most frequently appear in the articles that are tagged as clickbait. To do that, I generated a wordcloud and it showed me this:
 
-![Wordcloud](https://i.imgur.com/aEZdoS0.png){:class="img-responsive"}
+{% include image.html url="https://i.imgur.com/aEZdoS0.png" description="df" %}
 
 The frequency of each word appearing in clickbait articles is given by its size in the graphic above. Leaving the largest words aside, my initial observation is that there are quite a handful of words that are associated with politics - 'trump', 'president', 'clinton', 'hilary', 'business' and so on. 
 
@@ -44,15 +44,15 @@ So what about the largest words then? What are they most associated with? For th
 
 Doing so generated the following lists of words that the model considers 'most similar' to that particular word:
 
-![Sign](https://i.imgur.com/2cDvrSi.png){:class="img-responsive"}
-![Post](https://i.imgur.com/GrBYyeR.png){:class="img-responsive"}
-![Log](https://i.imgur.com/bQsfQMX.png){:class="img-responsive"}
+{% include image.html url="https://i.imgur.com/2cDvrSi.png" description="sign" %}
+{% include image.html url="https://i.imgur.com/GrBYyeR.png" description="log" %}
+{% include image.html url="https://i.imgur.com/bQsfQMX.png" description="post" %}
 
 ### Topic Modeling
 
 In text analysis, topic modeling is a form of unsupervised learning that uses statistical models to discover the abstract 'topics' that occur in a corpus of text. By using the excellent tool provided by GraphLab, I generated a visual representation of the topics found in the corpus.
 
-![LDA](https://i.imgur.com/x1W0fa2.png){:class="img-responsive"}
+{% include image.html url="https://i.imgur.com/x1W0fa2.png" description="lda" %}
 
 Some of the topics identified in the corpus were:
 7 - business<br>
@@ -90,7 +90,7 @@ Moving on the task at hand, I tried my hand at the following: Logistic regressio
 
 My experiments with the various forms of classifiers showed that a multinomial unigram Naive Bayes classifier worked best, achieving a recall score of 0.71. This means that assuming an article was _actually clickbait_, the model was able to predict that it was so 71 times out of 100. 
 
-![results](https://i.imgur.com/HhSHVHD.png){:class="img-responsive"}
+{% include image.html url="hhttps://i.imgur.com/HhSHVHD.png" description="nb" %}
 
 ## Neural Networks Into The Fray
 
@@ -100,7 +100,7 @@ Given the complexity of text classification problems, I wanted to see if modelin
 
 Since my problem was a classification problem, all I needed was a single Dense output layer that told me the value of either 1 or 0. Using a 128-cell network with a sigmoid activation function, I was able to achieve a score of 0.82 when training using Keras. For the uninitiated, Keras uses Tensorflow as the backend, but it greatly reduces the complexity of the latter with fewer parameters to specify, allowing one to get results quickly.
 
-![lstm](https://i.imgur.com/s0Ni9Yg.png){:class="img-responsive"}
+{% include image.html url="https://i.imgur.com/s0Ni9Yg.png" description="lstm" %}
 
 While you can see from the screenshot above that I had trained it for 10 epochs, the reality was that the accuracy score had started to peak out by epoch 4, with subsequent epochs all having lower accuracy scores. 
 
