--- a/_posts/2017-11-15-Capstone.md
+++ b/_posts/2017-11-15-Capstone.md
@@ -90,7 +90,7 @@ Moving on the task at hand, I tried my hand at the following: Logistic regressio
 
 My experiments with the various forms of classifiers showed that a multinomial unigram Naive Bayes classifier worked best, achieving a recall score of 0.71. This means that assuming an article was _actually clickbait_, the model was able to predict that it was so 71 times out of 100. 
 
-{% include image.html url="hhttps://i.imgur.com/HhSHVHD.png" description="nb" %}
+{% include image.html url="https://i.imgur.com/HhSHVHD.png" description="nb" %}
 
 ## Neural Networks Into The Fray
 
